--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "t-shirt",
   "version": "1.0.0",
-  "main": "sendEmail.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "nodemailer": "^6.9.8"
   }
 }
